--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     max-width: 700px;
-    height: 90vh;
+    height: 100%;
     text-align: center;
     margin: 0 auto;
     padding: 20px;
