--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@ body {
 .container {
     max-width: 700px;
     height: 100%;
-    text-align: center;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
@@ -14,31 +13,19 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.row {
-    max-width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    border: 1px solid #eee;
-    text-align: start;
-    align-items: center;
-    margin: 0 10%;
-}
-
-.col-1 { width: 30%;}
-.col-2 { width: 70%;}
-
 h1 {
-    padding-left: 20px;
+    font-size: 40px;
 }
 
 img {
     max-width: 100%;
     height: auto;
+    border-radius: 5px;
 }
 
 p {
-    margin: 20px;
-    padding: 10px;
+    margin: 10px 0;
+    padding: 10px 0;
 }
 
 a {
