--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #d8d3d3;
+    background-color: rgb(19, 18, 18);
+    /* background-color: #d8d3d3; */
 }
 
 .container {
@@ -8,7 +9,8 @@ body {
     height: 100%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    /* background-color: #fff; */
+    background-color: orange;
     border-radius: 5px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -27,15 +29,21 @@ img {
 p {
     margin: 10px 0;
     padding: 10px 0;
+    font-weight: 600;
 }
 
 a {
-    color: #007BFF;
     text-decoration: none;
+    border: ;
+    background-color: #007BFF;
+    padding: 15px;
+    border-radius: 5px;
+    color: #fff;
 }
 
 a:hover {
-    color: #0b65c5;
+    color: #fff;
+    background-color: #075db9;
     text-decoration: underline;
 }
 
