--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     margin: 0 auto;
     padding: 20px;
     /* background-color: #fff; */
-    background-color: orange;
+    background-color: rgb(153, 226, 18);
     border-radius: 5px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
