--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,16 @@ body {
 }
 
 .container {
-    max-width: 700px;
+    max-width: 500px;
     height: 100%;
     margin: 0 auto;
     padding: 20px;
+    margin-top: 30px;
     /* background-color: #fff; */
-    background-color: rgb(153, 226, 18);
-    border-radius: 5px;
+    background-color: rgb(151, 18, 151);
+    border-radius: 20px;
     text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 20px 9px rgb(16, 241, 65);
 }
 
 h1 {
@@ -22,7 +23,7 @@ h1 {
 
 img {
     max-width: 100%;
-    border-radius: 20px;
+    border-radius: 50%;
     height: 250px;
 }
 
@@ -34,8 +35,8 @@ p {
 
 a {
     text-decoration: none;
-    border: ;
-    background-color: #007BFF;
+    /* background-color: #007BFF; */
+    background-color: rgb(22, 168, 54);
     padding: 15px;
     border-radius: 5px;
     color: #fff;
@@ -43,12 +44,18 @@ a {
 
 a:hover {
     color: #fff;
-    background-color: #075db9;
+    background-color: rgb(25, 121, 44);
     text-decoration: underline;
 }
 
 
 @media screen and (max-width: 600px) {
+
+    .container {
+        padding-top: 10%;
+        margin: 7%;
+        overflow-y: hidden;
+    }
     p {
         padding: 5px;
     }
