--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
     padding: 20px;
     margin-top: 30px;
     /* background-color: #fff; */
-    background-color: rgb(151, 18, 151);
+    background-color: rgb(87, 18, 87);
+    /* background-color: rgb(151, 18, 151); */
     border-radius: 20px;
     text-align: center;
     box-shadow: 0 0 20px 9px rgb(16, 241, 65);
