--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 h1 {
     font-size: 40px;
-    color: #fff;
+    color: #eedada;
 
 }
 
@@ -31,7 +31,7 @@ img {
 }
 
 p {
-    color: #fff;
+    color: #eedada;
     margin: 10px 0;
     padding: 10px 0;
     font-weight: 600;
